<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Wahi</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="log_in">Log In</string>
    <string name="or">or</string>
    <string name="create_a_new_account">Create a new account.</string>
    <string name="user_name">User Name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_an_account">Already, I Have an Account.</string>
    <string name="create_account">Create Account.</string>
    <string name="enter_email">Enter your Email !</string>
    <string name="enter_pass">Enter your Password !</string>
    <string name="email_valid">Email is Valid !</string>
    <string name="enter_name">Enter your Name !</string>
    <string name="minimum_pass">Min Password length is 6 character !</string>
    <string name="u_should_confirm_pass">You should Confirm your Password !</string>
    <string name="password_not_matched">Password did not Matched !</string>
    <string name="home">Home</string>
    <string name="profile">My Profile</string>
    <string name="teachers">Teachers</string>
    <string name="honerBoard">Honor Board</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>